--- a/osbb/css/style.css
+++ b/osbb/css/style.css
@@ -1,8 +1,7 @@
-
-
 body {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 16px;
+	font-weight: 400;
 }
 
 /* common styles start */
@@ -147,7 +146,7 @@ body {
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
-	height: 100vh;
+	height: calc(100vh - 90px);
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -171,6 +170,7 @@ body {
 	color: #fff;
 	margin-bottom: 63px;
 }
+
 .site-preview__block-title span {
 	font-family: 'Muli', sans-serif;
 	font-weight: 400;
@@ -188,6 +188,7 @@ body {
 	margin-right: auto;
 	margin-bottom: 50px;
 }
+
 .site-privew__block-registr .input-text {
 	padding-top: 12px;
 	padding-bottom: 12px;
@@ -219,8 +220,9 @@ body {
 	font-size: 14px;
 	line-height: 18px;
 	text-transform: uppercase;
-	border:none;
+	border: none;
 }
+
 .site-preview__block-notation {
 	display: flex;
 	max-width: 569px;
@@ -235,13 +237,17 @@ body {
 	margin-bottom: 26px;
 	position: relative;
 }
-.site-preview__block-notation .left-block, .right-block, .center-block {
+
+.site-preview__block-notation .left-block,
+.right-block,
+.center-block {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	font-size: 14px;
 	line-height: 18px;
 }
+
 .site-preview__block-notation .left-block {
 
 	position: relative;
@@ -263,24 +269,161 @@ body {
 	line-height: 30px;
 	color: #fff;
 }
+
 .site-preview__block-notation .left-block::after {
 	content: '';
-    position: absolute;
-    width: 96px;
-    height: 1px;
-    background-color: #fff;
-    top: 30px;
-    margin-left: 100px;
-    left: 0;
+	position: absolute;
+	width: 96px;
+	height: 1px;
+	background-color: #fff;
+	top: 30px;
+	margin-left: 100px;
+	left: 0;
 }
+
 .site-preview__block-notation .center-block::after {
 	content: '';
-    position: absolute;
-    width: 96px;
-    height: 1px;
-    background-color: #fff;
-    top: 30px;
-    margin-left: 142px;
-    left: 0;
+	position: absolute;
+	width: 96px;
+	height: 1px;
+	background-color: #fff;
+	top: 30px;
+	margin-left: 142px;
+	left: 0;
 }
-	/* site-preview styles end*/
+
+/* site-preview styles end*/
+
+/* slider section start */
+
+.about-us {
+	padding-top: 55px;
+	padding-bottom: 55px;
+}
+
+.about-us-title {
+	font-family: 'Muli', sans-serif;
+	font-weight: 600;
+	font-size: 20px;
+	line-height: 25px;
+	text-align: center;
+	letter-spacing: 0.045em;
+	text-transform: uppercase;
+	color: #6E788D;
+	padding-top: 13px;
+	margin-bottom: 14px;
+	position: relative;
+}
+
+.about-us-title::before {
+	width: 105px;
+	height: 1px;
+	background-color: #6E788D;
+	content: '';
+	display: block;
+	top: 0;
+	left: 45%;
+	position: absolute;
+}
+
+.about-us-subtitle {
+	font-family: 'Muli', sans-serif;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 20px;
+	text-align: center;
+	color: #9CA3AB;
+	margin-bottom: 35px;
+
+}
+
+.section-slider__item-content {
+	display: flex;
+	flex-wrap: wrap;
+	margin-right: -15px;
+	margin-left: -15px;
+}
+
+.section-slider__item-images {
+	flex: 0 0 33.33333%;
+	max-width: 33.33333%;
+	padding-right: 15px;
+	padding-left: 15px;
+}
+
+.section-slider-description {
+	text-align: center;
+}
+
+.section-slider__link {
+	display: inline-block;
+	background-color: #86BC42;
+	border-radius: 50px;
+	padding: 12px 31px;
+	font-family: 'Muli', sans-serif;
+	font-weight: 600;
+	font-size: 14px;
+	text-transform: uppercase;
+	color: #FFFFFF;
+	text-align: center;
+	position: relative;
+	text-decoration: none;
+}
+
+.section-slider__link::after {
+	content: '';
+	position: absolute;
+	width: 17px;
+	height: 1px;
+	background-color:#FFFFFF;
+	top: 50%;
+	right: 0;
+}
+
+
+.slider-dots {
+	list-style: none;
+	display: flex;
+	margin-top: 35px;
+	justify-content: center;
+	margin-bottom: 35px;
+}
+
+.slider-dots button {
+	border: none;
+	width: 6px;
+	height: 6px;
+	background-color: #6E788D;
+	border-radius: 50%;
+	font-size: 0;
+	margin-right: 17px;
+	padding: 0;
+	outline: none;
+}
+
+.slider-dots .slick-active button {
+	width: 21px;
+	height: 21px;
+	border: 1px solid #6E788D;
+	background-color: #fff;
+	outline: none;
+}
+
+.section-slider__arrow {
+	position: relative;
+}
+.section-slider__arrow .left-arrow .left-slider-arrow {
+	position: absolute;
+    top: -46px;
+    left: 38%;
+	cursor: pointer;
+	/* transform: translateY(-12px); */
+}
+.section-slider__arrow .right-arrow .right-slider-arrow {
+	position: absolute;
+	right: 39%;
+	bottom: 40px;
+	cursor: pointer;
+	/* transform: translateY(-6px); */
+}
+/* slider section end */
